Fix z-index problem

--- a/css/components/_nav.css
+++ b/css/components/_nav.css
@@ -7,7 +7,7 @@
 	transition: transform 250ms ease-in-out, box-shadow 250ms ease-in-out, background-color 250ms ease-in-out;
 	box-shadow: 0px 0px 2px rgba(0, 0, 0, 0);
 	background-color: $light-grey;
-	z-index: 2;
+	z-index: 9;
 	height: $nav-height;
 	will-change: transform, box-shadow, background-color;
 }
